--- a/ui-engineer-lessons/package.json
+++ b/ui-engineer-lessons/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "eslint",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "deploy-gh": "npm run build-storybook && gh-pages -d storybook-static -t true"
   },
   "dependencies": {
     "clsx": "^2.1.1",
@@ -36,6 +37,7 @@
     "gh-pages": "^6.3.0",
     "playwright": "^1.57.0",
     "storybook": "^10.1.4",
+    "style-dictionary": "^3.9.2",
     "tailwindcss": "^4",
     "typescript": "^5",
     "vite": "^7.2.6",
